[tool.poetry]
name = "ebookspeech"
version = "0.1.0"
description = "Yet another openai TTS"
authors = ["Agata Ordano <gh@choccymilk.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
